[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.6.2"
thiserror = "1.0.21"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}

[features]
no-entrypoint = [] # allows this program to be imported by other programs

[lib]
crate-type = ["cdylib", "lib"]
